plugins {
    id 'maven-publish'
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'fr.freshperf.architect'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
    options.release = 21
}

repositories {
    mavenCentral()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = "sh.fyz"
            artifactId = "architect"
            version = "1.0.8"

            artifact shadowJar // Publish the fat jar instead of the normal jar
        }
    }
}

dependencies {
    implementation "org.hibernate.orm:hibernate-core:6.3.2.Final"
    implementation "com.zaxxer:HikariCP:7.0.2"
    implementation "org.reflections:reflections:0.10.2"
    implementation "jakarta.persistence:jakarta.persistence-api:3.2.0"
    implementation 'redis.clients:jedis:7.1.0'
    implementation 'org.apache.commons:commons-pool2:2.13.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
    implementation 'io.github.classgraph:classgraph:4.8.184'
    implementation 'org.postgresql:postgresql:42.7.8'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

shadowJar {

    manifest {
        attributes(
            'Main-Class': 'sh.fyz.architect.Architect'
        )
    }
}